// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider components alert configProvider 1`] = `
<div
  class="config-alert config-alert-success config-alert-no-icon"
  data-show="true"
>
  <span
    class="config-alert-message"
  >
    Bamboo is Little Light
  </span>
  <span
    class="config-alert-description"
  />
</div>
`;

exports[`ConfigProvider components alert normal 1`] = `
<div
  class="ant-alert ant-alert-success ant-alert-no-icon"
  data-show="true"
>
  <span
    class="ant-alert-message"
  >
    Bamboo is Little Light
  </span>
  <span
    class="ant-alert-description"
  />
</div>
`;

exports[`ConfigProvider components alert prefixCls 1`] = `
<div
  class="prefix-alert prefix-alert-success prefix-alert-no-icon"
  data-show="true"
>
  <span
    class="prefix-alert-message"
  >
    Bamboo is Little Light
  </span>
  <span
    class="prefix-alert-description"
  />
</div>
`;

exports[`ConfigProvider components anchor configProvider 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="config-anchor-wrapper"
      style="max-height:100vh"
    >
      <div
        class="config-anchor"
      >
        <div
          class="config-anchor-ink"
        >
          <span
            class="config-anchor-ink-ball"
          />
        </div>
        <div
          class="config-anchor-link"
        >
          <a
            class="config-anchor-link-title"
            href="#bamboo"
            title="Little Light"
          >
            Little Light
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigProvider components anchor normal 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="ant-anchor-wrapper"
      style="max-height:100vh"
    >
      <div
        class="ant-anchor"
      >
        <div
          class="ant-anchor-ink"
        >
          <span
            class="ant-anchor-ink-ball"
          />
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#bamboo"
            title="Little Light"
          >
            Little Light
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigProvider components anchor prefixCls 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="prefix-anchor-wrapper"
      style="max-height:100vh"
    >
      <div
        class="prefix-anchor"
      >
        <div
          class="prefix-anchor-ink"
        >
          <span
            class="prefix-anchor-ink-ball"
          />
        </div>
        <div
          class="prefix-anchor-link"
        >
          <a
            class="prefix-anchor-link-title"
            href="#bamboo"
            title="Little Light"
          >
            Little Light
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigProvider components auto-complete configProvider 1`] = `
<div
  class="config-select-show-search config-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-controls="test-uuid"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              class="ant-input ant-select-search__field"
              type="text"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`ConfigProvider components auto-complete normal 1`] = `
<div
  class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-controls="test-uuid"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              class="ant-input ant-select-search__field"
              type="text"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`ConfigProvider components auto-complete prefixCls 1`] = `
<div
  class="prefix-auto-complete-show-search prefix-auto-complete-auto-complete prefix-auto-complete prefix-auto-complete-combobox prefix-auto-complete-enabled"
>
  <div
    aria-autocomplete="list"
    aria-controls="test-uuid"
    aria-expanded="false"
    aria-haspopup="true"
    class="prefix-auto-complete-selection
            prefix-auto-complete-selection--single"
    role="combobox"
  >
    <div
      class="prefix-auto-complete-selection__rendered"
    >
      <ul>
        <li
          class="prefix-auto-complete-search prefix-auto-complete-search--inline"
        >
          <div
            class="prefix-auto-complete-search__field__wrap"
          >
            <input
              class="ant-input prefix-auto-complete-search__field"
              type="text"
              value=""
            />
            <span
              class="prefix-auto-complete-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="prefix-auto-complete-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="anticon anticon-down prefix-auto-complete-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`ConfigProvider components avatar configProvider 1`] = `
<span
  class="config-avatar config-avatar-circle"
>
  <span
    class="config-avatar-string"
  />
</span>
`;

exports[`ConfigProvider components avatar normal 1`] = `
<span
  class="ant-avatar ant-avatar-circle"
>
  <span
    class="ant-avatar-string"
  />
</span>
`;

exports[`ConfigProvider components avatar prefixCls 1`] = `
<span
  class="prefix-avatar prefix-avatar-circle"
>
  <span
    class="prefix-avatar-string"
  />
</span>
`;

exports[`ConfigProvider components back-top configProvider 1`] = `
<div
  class="config-back-top"
>
  <div
    class="config-back-top-content"
  >
    <div
      class="config-back-top-icon"
    />
  </div>
</div>
`;

exports[`ConfigProvider components back-top normal 1`] = `
<div
  class="ant-back-top"
>
  <div
    class="ant-back-top-content"
  >
    <div
      class="ant-back-top-icon"
    />
  </div>
</div>
`;

exports[`ConfigProvider components back-top prefixCls 1`] = `
<div
  class="prefix-back-top"
>
  <div
    class="prefix-back-top-content"
  >
    <div
      class="prefix-back-top-icon"
    />
  </div>
</div>
`;
